syntax = "proto3";

import "envoy/api/v2/route/route.proto";

import "validate/validate.proto";

package envoy.service.tap.v2alpha;
option java_package = "io.envoyproxy.envoy.service.tap.v2alpha";
option java_multiple_files = true;

// fixfix
message TapConfig {
  // fixfix
  MatchConfig match_config = 1 [(validate.rules).message.required = true];

  // fixfix
  OutputConfig output_config = 2 [(validate.rules).message.required = true];

  // fixfix
  RateLimitConfig rate_limit_config = 3;
}

// fixfix
message MatchConfig {
  // fixfix
  HttpMatchConfig http_match_config = 1;
}

// fixfix
message HttpMatchConfig {
  // fixfix
  HttpRequestMatchConfig request_match_config = 1;

  // fixfix
  HttpResponseMatchConfig response_match_config = 2;
}

// fixfix
message HttpRequestMatchConfig {
  // fixfix
  repeated api.v2.route.HeaderMatcher headers = 1;
}

// fixfix
message HttpResponseMatchConfig {
  // fixfix
  repeated api.v2.route.HeaderMatcher headers = 1;
}

// fixfix
message OutputConfig {
  repeated OutputSink sinks = 1 [(validate.rules).repeated .min_items = 1];
}

// fixfix
message OutputSink {
  oneof output_sink_type {
    option (validate.required) = true;

    // fixfix
    StreamingAdminSink streaming_admin = 1;
  }
}

// fixfix
message StreamingAdminSink {
}

// fixfix
message RateLimitConfig {
}
